[package]
name = "env_perm"
version = "0.1.3"
authors = ["Tom Gowan <tomrgowan@gmail.com>"]
edition = "2018"
description = "Sets environment variables in your profile"
documentation = "https://docs.rs/env_perm"
repository = "https://github.com/freesig/env_perm"
readme = "README.md"
license = "MIT"
keywords = ["env", "environment", "variable"]

[dependencies]
boolinator = "2.4.0"
dirs = "1.0"
phf = { version = "0.11.2", features = [ "macros" ] }
